<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RecipesActivity">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recipes_rv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible" />

    <ProgressBar
        android:id="@+id/recipes_loading_pb"
        android:layout_width="42dp"
        android:layout_height="42dp"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/spacing"
        android:visibility="visible" />

    <ImageView
        android:id="@+id/recipes_cloud_iv"
        android:layout_width="@dimen/icon"
        android:layout_height="@dimen/icon"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/spacing"
        android:contentDescription="@string/no_connection_icon"
        android:visibility="invisible"
        app:srcCompat="@drawable/ic_cloud_off" />

    <TextView
        android:id="@+id/recipes_messages_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:fontFamily="sans-serif-condensed"
        android:gravity="center"
        android:text="@string/loading"
        android:textSize="@dimen/messages_font_size"
        android:visibility="visible" />

</FrameLayout>

