...

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recipe_steps_rv"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="@dimen/spacing"
            android:layout_marginEnd="@dimen/spacing"
            android:layout_marginStart="@dimen/spacing"
            android:layout_weight="1"
...
