...
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.exoplayer2.ui.PlayerView
            android:id="@+id/playerView"
            android:background="@color/black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="visible" />

        <ImageView
...
